@@ -857,13 +857,13 @@ mosquitto_sub -t 'bbc/#' -T bbc/bbc1 --remove-retained</programlisting>
 				<listitem><para><option>%j</option> JSON output of message
 						parameters and timestamp, with a quoted and escaped
 						payload. For example
-						<code>{"tst":1470825369,"topic":"greeting","qos":0,"retain":0,"payload":"hello
+						<code>{"tst":"2020-05-06T22:12:00.000000+0100","topic":"greeting","qos":0,"retain":0,"payload":"hello
 							world"}</code></para></listitem>
 				<listitem><para><option>%J</option> JSON output of message
 						parameters and timestamp, with a non-quoted and
 						non-escaped payload - this means the payload must
 						itself be valid JSON. For example:
-						<code>{"tst":1470825369,"topic":"foo","qos":0,"retain":0,"payload":{"temperature":27.0,"humidity":57}}</code>.</para>
+						<code>{"tst":"2020-05-06T22:12:00.000000+0100","topic":"foo","qos":0,"retain":0,"payload":{"temperature":27.0,"humidity":57}}</code>.</para>
 					<para>If the payload is not valid JSON, then the error message "Error: Message payload is not valid JSON on topic
 						&lt;topic&gt;" will be printed to stderr.</para></listitem>
 
